# Flow-Factory

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agents/knowledge/: README.md  architecture.md  constraints.md  dependencies.md  docs_maintenance.md  philosophy.md
.agents/knowledge/topics/: adapter_conventions.md  autocast_param_swap.md  dtype_precision.md  parity_testing.md  sample_lifecycle.md  samplers.md  train_inference_consistency.md
.agents/skills/ff-debug/: SKILL.md
.agents/skills/ff-develop/: SKILL.md
.agents/skills/ff-new-algorithm/: SKILL.md
.agents/skills/ff-new-model/: SKILL.md
.agents/skills/ff-new-reward/: SKILL.md
.agents/skills/ff-review/: SKILL.md
.cursor/rules/: skills-reusable-only.mdc
config/accelerate_configs/: fsdp2.yaml  fsdp_full_shard.yaml  fsdp_grad_op_shard.yaml
config/runtime/: geneval-h100-requirements.txt  geneval-mmdet-requirement.txt  geneval-reward-requirements.txt  pickapic-reward-no-deps-requirements.txt  pickapic-reward-requirements.txt
dataset/GenEval2/: test.jsonl
dataset/qwen_image_bench/: prepare.py  test.jsonl  train.jsonl
examples/: README.md
guidance/: algorithms.md  new_model.md  rewards.md  storage_and_training.md  workflow.md
scripts/: build_geneval_no_rewrite_dataset.py  build_geneval_stock_ppd_records.py  build_pickapic_rewrite_dataset.py  check_flowfactory_runtime.sh  install_geneval_deps.sh  prepare_flowfactory_runtime.sh  prepare_ppd_records.sh  run_geneval_ppd_experiment.sh  run_in_flowfactory_runtime.sh  run_pickapic_ppd_experiment.sh  start_vllm_qwen_image_bench.sh  start_vllm_rational_reward.sh  train_nft_geneval_baseline.sh  train_nft_geneval_no_rewrite.sh  train_nft_geneval_stock_ppd.sh  train_nft_pickapic_multi_reward.sh  train_nft_pickapic_multi_reward_ppd.sh  train_nft_pickapic_multi_reward_rewrite.sh
scripts/lib/: load_env.sh
src/flow_factory/: cli.py
src/flow_factory/advantage/: advantage_processor.py
src/flow_factory/critique/: __init__.py  abc.py  loss.py  openai_compatible.py  ppd.py  processor.py  prompts.py  registry.py  validators.py
src/flow_factory/data_utils/: cache_fingerprint.py  dataset.py  loader.py  multi_source.py
src/flow_factory/hparams/: __init__.py  args.py  critique_args.py  dataset_args.py  log_args.py  model_args.py  ppd_args.py  scheduler_args.py
src/flow_factory/models/: abc.py  model_bundle.py
src/flow_factory/rewards/: __init__.py  geneval.py  geneval2_soft_tifa.py  hpsv2_reward.py  rational_rewards_edit.py  rational_rewards_t2i.py  registry.py  reward_processor.py  vllm_evaluate.py
src/flow_factory/samples/: samples.py
src/flow_factory/scheduler/: abc.py  registry.py
src/flow_factory/trainers/: abc.py  awm.py  crd.py  dgpo.py  dpo.py  dppo.py  grpo.py  loader.py  nft.py  registry.py
src/flow_factory/utils/: base.py  checkpoint.py  checkpoint_publish.py  dist.py  yaml_config.py
tests/rewards/: test_async_reward_event_loop.py
(+48 files in other folders)
